[package]
name = "rebalance-wasm"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "rebalance_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethabi = "18.0"
ethereum-types = "0.14"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
