[package]
name = "rpc-example"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "rpc_example"
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

